--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -64,6 +64,7 @@
                             <md5>3afe15e976734d9daac26310110c4594</md5>
                             <skipCache>true</skipCache>
                             <overwrite>true</overwrite>
+                            <readTimeout>3000</readTimeout>
                         </configuration>
                     </execution>
                     <execution>
@@ -79,6 +80,7 @@
                             <md5>6bea60c34c5db6797150610dacdc6bce</md5>
                             <skipCache>true</skipCache>
                             <overwrite>true</overwrite>
+                            <readTimeout>3000</readTimeout>
                         </configuration>
                     </execution>
                     <execution>
@@ -94,6 +96,7 @@
                             <md5>dc5e7f18c8d36ac1d3d4753a87c98d0a</md5>
                             <skipCache>true</skipCache>
                             <overwrite>true</overwrite>
+                            <readTimeout>3000</readTimeout>
                         </configuration>
                     </execution>
                 </executions>
