--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,10 @@ jobs:
           - { name: "17" }
           - { name: "18" }
           - { name: "19" }
-          - { name: "20-ea" }
+          - { name: "20" }
+          - { name: "21" }
+          - { name: "22-ea",
+              download_url: "https://download.java.net/java/early_access/jdk22/34/GPL/openjdk-22-ea+34_linux-x64_bin.tar.gz"}
 
     name: Build with JDK ${{ matrix.java.name }}
 
