--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,11 +65,12 @@ jobs:
           check-latest: true
       - name: Build and Test with Java ${{ matrix.java.name }}
         run: mvn -B javadoc:javadoc formatter:validate verify
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         name: TCK report
         with:
           name: tck-report
           path: testsuite/tck/target/surefire-reports
+          overwrite: 'true'
 
   quality:
     needs: [build]
